@@ -1,0 +1,9 @@
+package TranslateBtoAEphemeral;
+use Moo;
+extends 'TranslateBtoA';
+with 'Net::Object::Peer::Ephemeral';
+
+1;
+
+
+
